Improved styling. By far.

--- a/less/main.less
+++ b/less/main.less
@@ -1,1 +1,26 @@
 @import "../bower_components/bootstrap/less/bootstrap.less";
+
+.match {
+  border-bottom: 1px solid @gray-lighter;
+  padding: @padding-base-vertical @padding-base-horizontal (2 * @padding-large-vertical);
+
+  > .match-heading {
+    margin-bottom: @padding-small-vertical;
+    > .match-seen {
+      .small();
+      color: @gray;
+    }
+  }
+
+  // Messages.
+  > p:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.menubar {
+  border-bottom: 1px solid @gray;
+  padding: @padding-base-vertical @padding-base-horizontal;
+}
+
+
