Add timestamp formatting.

--- a/less/main.less
+++ b/less/main.less
@@ -19,7 +19,7 @@
 }
 
 .menubar {
-  border-bottom: 1px solid @gray;
+  border-bottom: 1px solid @gray-light;
   padding: @padding-base-vertical @padding-base-horizontal;
 }
 
