Basic retina images.

--- a/less/main.less
+++ b/less/main.less
@@ -16,10 +16,18 @@
 
   > .match-heading {
     margin-bottom: @padding-small-vertical;
+    > h4 {
+      display: inline-block;
+      margin-right: 3px;
+    }
     > .match-seen {
       .small();
       color: @gray;
     }
+  }
+
+  .match-image {
+    margin-right: 5px;
   }
 
   // Messages.
